--- a/src/app/Components/Feature/table.component.html
+++ b/src/app/Components/Feature/table.component.html
@@ -5,12 +5,32 @@
         <div class="wrapper">
             <div class="ticket-holder my-2 border border-dark rounded" style="background-color: white"
                 *ngFor="let ticket of column.tickets">
-                <input class="input-title-holder" name="{{ticket.ticketId}}" (click)="onClickTitle($event)" (keyup.enter)="saveChange($event)"
-                    value="{{ticket.title}}" (focusout)="onOutTitle($event)"  readonly>
+                <input class="input-title-holder" name="{{ticket.ticketId}}" (click)="onClickTitle($event)"
+                    (keyup.enter)="saveChange($event)" value="{{ticket.title}}" (focusout)="onOutTitle($event)"
+                    readonly>
+                <a routerLink="/table/{{ticket.ticketId}}" title="{{ticket.ticketId}}" class="detail-view">
+                    <i class="bi bi-three-dots-vertical">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" fill="currentColor"
+                            class="bi bi-three-dots-vertical" viewBox="0 0 16 16">
+                            <path
+                                d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z" />
+                        </svg>
+                    </i>
+                </a>
+                <a href="#" title="{{ticket.ticketId}}" class="delete-link">
+                    <i class="bi bi-x">
+                        <svg (click)="onDelete($event)" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%"
+                            fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+                            <path
+                                d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z" />
+                        </svg>
+                    </i>
+                </a>
+
             </div>
         </div>
         <div class="footer active" (click)="onClick($event)">
-            <a href="#">
+            <a routerLink ="/table">
                 <span class="mr-5 newTicket">Add new ticket</span>
             </a>
             <i class="bi bi-plus bi-lg " style="float:right">
