--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-    <app-nav-bar></app-nav-bar>
-    <app-table></app-table>
+    <div>
+      <router-outlet></router-outlet>
+    </div>
+    
 </body>
 </html>
